--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "cn": "^0.1.1",
     "framer-motion": "^12.23.24",
